// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Button Button primary with colors 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      t =&gt; t.color.cta
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      t =&gt; t.color.negative
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cvcdIk"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with colors 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      t =&gt; t.color.cta
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 erknFv"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      t =&gt; t.color.negative
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 gwHKfT"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button that is full width 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 chxgx"
  onClick={[Function]}
  type="button"
>
  <span>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Button which sets focus on another button 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hEIiGr"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Click to focus
        </span>
      </span>
    </button>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cvcdIk"
      onClick={[Function]}
      type="button"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Focus me
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with different variants 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      primary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      secondary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 erknFv"
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      neutral
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kJslgx"
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with loading state 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Primary
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
    direction="row"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-m-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-m-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-m-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-m-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 hqSLHb"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dQxbEG"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-l-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-l-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-l-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-l-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Primary with custom color
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
    direction="row"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cvcdIk"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-m-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-m-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-m-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-m-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kcuhuV"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dQxbEG"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-primary-l-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-primary-l-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FFFFFF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FFFFFF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-primary-l-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-primary-l-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Secondary
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
    direction="row"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 erknFv"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-m-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-m-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-m-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-m-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 bybvYe"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dQxbEG"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-l-undefined-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-l-undefined-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#0046FF"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#0046FF"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-l-undefined-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-l-undefined-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Secondary with custom color
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
    direction="row"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 gwHKfT"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Medium
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={20}
                viewBox="0 0 24 24"
                width={20}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-m-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-m-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-m-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-m-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dDySyC"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dQxbEG"
            >
              Large
            </span>
          </span>
          <span>
            <span
              className="Spinner__Animation-x7jzy3-0 fapQym"
            >
              <svg
                className="Spinner__StyledSvg-x7jzy3-1 ldbroN"
                height={24}
                viewBox="0 0 24 24"
                width={24}
              >
                <defs>
                  <linearGradient
                    id="spinner-spinner-secondary-l-#FF1900-1"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity="0"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                  </linearGradient>
                  <linearGradient
                    id="spinner-spinner-secondary-l-#FF1900-2"
                    x1="50%"
                    x2="50%"
                    y1="0%"
                    y2="100%"
                  >
                    <stop
                      offset="0%"
                      stopColor="#FF1900"
                      stopOpacity=".5"
                    />
                    <stop
                      offset="100%"
                      stopColor="#FF1900"
                    />
                  </linearGradient>
                </defs>
                <g
                  fill="none"
                  fillRule="evenodd"
                >
                  <path
                    d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
                    fill="url(#spinner-spinner-secondary-l-#FF1900-1)"
                  />
                  <path
                    d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
                    fill="url(#spinner-spinner-secondary-l-#FF1900-2)"
                    transform="rotate(-180 6 12)"
                  />
                </g>
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
  <button
    onClick={[Function]}
    type="button"
  >
    toggle loading
  </button>,
]
`;

exports[`Storyshots Molecules | Button Button with size modified 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Primary
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
    direction="row"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Medium
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 hqSLHb"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dQxbEG"
            >
              Large
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Secondary
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
    direction="row"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Medium
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 erknFv"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Medium
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
      direction="column"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
      >
        Large
      </div>
      <div>
        <button
          className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 bybvYe"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dQxbEG"
            >
              Large
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Button Button with type modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Reset
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
        onClick={[Function]}
        type="reset"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Reset
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Submit
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
        onClick={[Function]}
        type="submit"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Submit
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Buttons composed in a group 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ijWdOb"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 iwwqHC"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 chxgx"
      onClick={[Function]}
      type="submit"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Submit
        </span>
      </span>
    </button>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 iwwqHC"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 UrEfI"
      onClick={[Function]}
      type="reset"
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Reset
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Default usage 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
  onClick={[Function]}
  type="button"
>
  <span>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Disabled Button with different variants 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 gSjdqX"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      primary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 eDsllM"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      secondary
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 chhBPF"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            Button
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 fJcYPb"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 ihZCpP"
    >
      neutral
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 haeClc"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Disabled link looking like a button 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cTijES"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
    >
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Molecules | Button External link looking like a button 1`] = `
<a
  className="Button__StyledLink-lqp9m3-1 ghEktL"
  href="//www.google.com"
  onClick={[Function]}
  rel="noopener noreferrer nofollow"
  size="m"
  target="_blank"
>
  <span>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
    >
      Button
    </span>
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a button 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Reset
    </div>
    <div>
      <a
        className="Button__StyledLink-lqp9m3-1 iDrOCM"
        href="#/route1"
        onClick={[Function]}
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            To Route1
          </span>
        </span>
      </a>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Submit
    </div>
    <div>
      <a
        className="Button__StyledLink-lqp9m3-1 iklELl"
        href="#/route2"
        onClick={[Function]}
      >
        <span>
          <span
            className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
          >
            To Route2
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Link looking like a button that is full width 1`] = `
<a
  className="Button__StyledLink-lqp9m3-1 ghEktL"
  href="#/overview"
  onClick={[Function]}
>
  <span>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
    >
      Button
    </span>
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a button with rel as nofollow 1`] = `
<a
  className="Button__StyledLink-lqp9m3-1 ghEktL"
  href="#/overview"
  onClick={[Function]}
  rel="nofollow"
>
  <span>
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
    >
      Button
    </span>
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a button with with colors 1`] = `
Array [
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Primary
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        t =&gt; t.color.cta
      </div>
      <div>
        <a
          className="Button__StyledLink-lqp9m3-1 iDrOCM"
          href="#/overview"
          onClick={[Function]}
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        t =&gt; t.color.negative
      </div>
      <div>
        <a
          className="Button__StyledLink-lqp9m3-1 dYDiXi"
          href="#/overview"
          onClick={[Function]}
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 iVZgSV"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
    >
      Secondary
    </span>
  </div>,
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
    direction="column"
  >
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        t =&gt; t.color.cta
      </div>
      <div>
        <a
          className="Button__StyledLink-lqp9m3-1 iklELl"
          href="#/overview"
          onClick={[Function]}
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
      direction="row"
    >
      <div
        className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
      >
        t =&gt; t.color.negative
      </div>
      <div>
        <a
          className="Button__StyledLink-lqp9m3-1 ZgvqF"
          href="#/overview"
          onClick={[Function]}
        >
          <span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>,
  <div
    className="Box__StyledDiv-sc-1bfv3i9-0 dOfUcX"
  />,
]
`;

exports[`Storyshots Molecules | Button Links looking like buttons composed in a group 1`] = `
<div
  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ijWdOb"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 byHxgz"
  >
    <a
      className="Button__StyledLink-lqp9m3-1 ghEktL"
      href="#/route1"
      onClick={[Function]}
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Submit
        </span>
      </span>
    </a>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 byHxgz"
  >
    <a
      className="Button__StyledLink-lqp9m3-1 bpmqui"
      href="#/route2"
      onClick={[Function]}
    >
      <span>
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
        >
          Reset
        </span>
      </span>
    </a>
  </div>
</div>
`;
